# advanced-programming-of-cryptographic-methods-project

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-client  Dockerfile-server  README.md  docker-compose.yml  server.bat  server.py  server.sh  tui.bat  tui.py  tui.sh
client/: Cargo.toml
client/src/: error.rs  errors.rs  lib.rs
common/: Cargo.toml
common/src/: lib.rs
config/: Cargo.toml  config.toml
config/src/: main.rs
config/update_server_keys/: Cargo.toml
config/update_server_keys/src/: main.rs
docs/: index.html
docs/doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/doc/curve25519_dalek/: all.html
docs/doc/ed25519/: struct.Error.html  struct.Signature.html  trait.SignatureEncoding.html  type.ComponentBytes.html  type.SignatureBytes.html
docs/doc/ed25519_dalek/: index.html  struct.Signature.html  struct.SigningKey.html  type.SignatureError.html
docs/doc/inout/: struct.InOutBufIter.html
docs/doc/proc_macro2/: enum.TokenTree.html  struct.TokenStream.html
docs/doc/protocol/: all.html  index.html  sidebar-items.js
docs/doc/quote/: trait.IdentFragment.html  trait.ToTokens.html
docs/doc/rand/: trait.CryptoRng.html  trait.RngCore.html
docs/doc/serde/: trait.Serialize.html
docs/doc/signature/: struct.Error.html
docs/doc/syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.CapturedParam.html  enum.Data.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.PointerMutability.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  (+171 more)
docs/doc/typenum/: macro.op.html
docs/doc/x25519_dalek/: struct.EphemeralSecret.html  struct.PublicKey.html  (+2 more)
protocol/: Cargo.toml
protocol/src/: constants.rs  errors.rs  lib.rs  ratchet.rs  utils.rs  x3dh.rs
report/: main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.out  main.run.xml  main.tex  main.toc
report/sections/: Installation.tex  Introduction.aux  Introduction.tex  Known_Limitations.tex  Requirements.tex  Security_Considerations.tex  Technical_Details.tex  referecences.bib
server/: Cargo.toml  run.py
server/app/: params.py  routes.py
server/app/static/scripts/: home.js
server/app/static/styles/: home.css
server/app/templates/: home.html
server/certs/: gen.sh  openssl.cnf
server/src/: errors.rs  main.rs  utils.rs
server/src/tests/: unit_tests.rs
trust/: .gitignore  Cargo.toml  README.md
trust/src/: main.rs
trust/src/client/: client.rs  mod.rs  tui.rs
trust/src/protocol/: mod.rs  utils.rs  x3dh.rs
trust/src/server/: handlers.rs  mod.rs  server.rs  state.rs  utils.rs
tui/: Cargo.toml
tui/src/: app.rs  errors.rs  event.rs  handler.rs  main.rs  tui.rs  ui.rs
tui/src/widgets/: chats.rs  empty_page.rs  mod.rs  popup.rs  register.rs
(+17415 files in other folders)
