[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
pyo3 = "0.23.3"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_bytes = "0.11.15"
sha2 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize = "1.8.1"
arrayref = "0.3.9"
curve25519-dalek = { version = "4.1.3", features = ["legacy_compatibility"] }
