[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10.3"
crossterm = "0.28.1"
curve25519-dalek = "4.1.3"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
log = "0.4.22"
rand = "0.8.5"
ratatui = "0.29.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_cbor = "0.11.2"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
x25519-dalek = "2.0.1"
sha2 = "0.10.8"
serde_bytes = "0.11.15"
hmac = "0.12.1"
base64 = "0.22.1"
reqwest = { version = "0.12.10", features = ["json"] }
warp = "0.3.7"
