[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }
serde_json = "1.0.137"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
env_logger = "0.11.6"
uuid = { version = "1.11.0", features = ["v4"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
chrono = "0.4.39"
base64 = "0.22.1"
aes-gcm = "0.10.3"
arrayref = "0.3.9"
anyhow = "1.0.95"
log = "0.4.25"
