[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }
client = {path =  "../client"}
serde_json = "1.0.137"
tokio = { version = "1.42.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
env_logger = "0.11.6"
uuid = { version = "1.11.0", features = ["v4"] }
futures-util = "0.3.31"
tokio-stream = "0.1.17"
chrono = "0.4.39"
base64 = "0.22.1"
aes-gcm = "0.10.3"
arrayref = "0.3.9"
anyhow = "1.0.95"
log = "0.4.25"
crossterm = { version = "0.28.1", features = ["event-stream"] }
ratatui = "0.29.0"
futures = "0.3.31"
unicode-segmentation = "1.12.0"
tui = "*"
tui-textarea = { version = "*", features = ["tuirs-crossterm"], default-features = false }


